# MediaPlayer

./: CMakeLists.txt  FindwxWidgets.cmake  README.md  main.cpp  savedSession.txt
Controller/: ControllerInterface.cpp  ControllerInterface.h  MediaController.cpp  MediaController.h  TagReader.cpp  TagReader.h
ControlsPNG/: musicPlayerIcon.xpm
Findcmake/: FindTAGLIB.cmake
GUI/: DaeumApp.cpp  DaeumApp.h  DragAndDrop.cpp  DragAndDrop.h  FrameInterface.cpp  FrameInterface.h  MainFrame.cpp  MainFrame.h  MediaTimer.cpp  MediaTimer.h  Observer.cpp  Observer.h  info.txt
Model/: Album.cpp  Album.h  Playlist.cpp  Playlist.h  Song.cpp  Song.h  Subject.cpp  Subject.h  SubjectInterface.cpp  SubjectInterface.h
tests/: CMakeLists.txt  savedSession.txt
tests/testSrc/: MediaControllerTest.cpp  PlaylistTest.cpp  SongTest.cpp  TagReaderTest.cpp  runAllTests.cpp  wxAppTest.cpp
